# fairseq-tutorial

./: README.rst  pyproject.toml
examples/translation/: README.rst  detokenizer.sh  evaluate-aspec.sh  prepare-aspec.sh  transformer.yaml  z2h-utf8.pl
